# qpots

./: .gitattributes  .gitignore  .readthedocs.yaml  ACCEPTANCE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  bo_slurm.sh  contributions.md  joss_submission_notes.md  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: readthedocs.yml
docs/source/: api_compatibility.rst  citation.rst  conf.py  constrained_example.rst  constrained_tutorial.rst  decoupled_osy_example.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  qpots_acquisition.rst  qpots_config.rst  qpots_doe.rst  qpots_function.rst  qpots_model_object.rst  qpots_runner.rst  qpots_ts_emo_wrappers.rst  qpots_tsemo_runner.rst  qpots_utils_acq_utils.rst  qpots_utils_pymoo_problem.rst  qpots_utils_tc_utils.rst  qpots_utils_utils.rst  unconstrained_example.rst
examples/: 1All_Parallel_TC_Testing_noMPI.py  2All_Parallel_TC_Constraint_noMPI.py  All_Parallel_TC.py  All_Parallel_TC_Constrained.py  All_Parallel_TC_Job_Array.py  Fall_25_custom_functions.py  HVKG_qNEHVI_Sobol.py  Multi_Seed_Wrapper.py  Original_HVKG_qNEHVI_Sobol.py  Parallel_TC.py  Sequential_TC.py  TC_Runner.py  constrained_branin_currin_tutorial.py  constrained_example.py  constrained_problem.py  custom_function_example.py  decoupled_osy_example.py  hpc_example.py  multi_fidelity_custom_funcs.py  multiple_acquisitions_example.py  partial_function.py  plot_qpots_noise_ablation.py  qpots_noise_ablation.py  single_constraint_example.py  tsemo_example.py  unconstrained_branin.py  unconstrained_branin_currin.py  zdt3.py  zdt3_TESTING.py
qpots/: __init__.py  acquisition.py  benchmark_registry.py  config.py  function.py  model_object.py  runner.py  tsemo_runner.py
qpots/TS-EMO/: BC_function.py  carside.py  dh1_func.py  dh1_func.py~  dtlz1_func.py  dtlz1_func.py~  dtlz3.py  dtlz3.py~  dtlz7.py  dtlz7.py~  penicillin_func.py  pennicilin_func.py~  vehiclesafety.py
qpots/utils/: acq_utils.py  pymoo_problem.py  tc_utils.py  utils.py
tests/: requirements.txt  test_acquisition.py  test_acquisition_multitask.py  test_acquisition_readability.py  test_compatibility.py  test_config.py  test_distribution.py  test_function.py  test_model_object.py  test_model_object_multitask.py  test_packaging.py  test_public_api.py  test_pymoo_problem.py  test_release_notes.py  test_runner.py  test_tsemo_runner.py  test_utils.py  test_utils_multitask.py
tools/: extract_release_notes.py  verify_distribution.py
