[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
qpots = ["TS-EMO/**/*"]  # Ensures all files in TS-EMO are included

[tool.setuptools.exclude-package-data]
qpots = ["**/__pycache__/*", "**/*.pyc", "TS-EMO/**/*.py~", "TS-EMO/**/*.m~"]

[tool.setuptools.packages.find]
include = ["qpots*"]

[project]
name = "qpots"
version = "2.0.1"
authors = [
  { name="Kade E. Carlson", email="kkc5441@psu.edu" },
  { name="Ashwin Renganathan", email="ashwin.renganathan@psu.edu" },
  { name="Peter E. Bachman", email="peb5234@psu.edu" },
]
description = "A BoTorch wrapper for solving multiobjective optimization problems with an implementation of the qPOTS algorithm."
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "botorch>=0.16.1",
    "torch>=2.12.0",
    "gpytorch>=1.14.2",
    "numpy>=2.2.6,<3",
    "scipy>=1.15.3",
    "pymoo>=0.6.1.6",
    "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/csdlpsu/qpots"
Issues = "https://github.com/csdlpsu/qpots/issues"
